--- a/about.html
+++ b/about.html
@@ -49,18 +49,17 @@
                 <div class="col-lg-7">
                     <h2 class="section-title gradient-title">About John Analyst</h2>
 
-                    <p class="lead about-text mb-3">
-                        I am a data analyst who turns messy data into clear insights that drive better business decisions.
-                        I specialise in cleaning and shaping datasets, building reliable ETL pipelines, designing dashboards,
-                        and delivering actionable analysis for stakeholders.
-                    </p>
+                        <p class="lead about-text mb-3">
+                        I am a <strong>Data Analyst and Applied 
+                        Statistician</strong> who transforms raw, 
+                        unstructured data into high-impact business intelligence.
+                        From building <strong>predictive loan models</strong> to architecting <strong>Retail Intelligence systems</strong>,
+                        I bridge the gap between complex mathematics and actionable strategy.
+                        </p>
 
                     <p class="about-text subtle">
-                        My day-to-day includes SQL query design for reporting, Python data pipelines (Pandas), and building
-                        interactive dashboards with Excel, Tableau and Power BI. I focus on reproducible workflows, clear visual
-                        storytelling and measurable impact.
-                    </p>
-
+My expertise spans the full data lifecycle: <strong>web scraping (Jumia)</strong>, building robust <strong>ETL pipelines in Python (Pandas)</strong>, and implementing machine learning like <strong>K-Means clustering</strong> for customer segmentation. I specialize in <strong>SQL (PostgreSQL)</strong>, <strong>Power BI</strong>, and <strong>Tableau</strong>, with a unique edge in automation—including deploying <strong>LLM-powered chatbots</strong> via the Gemini API to streamline communication.
+                        </p>
                     <ul class="list-unstyled mt-4 mb-3 row g-2">
                         <li class="col-sm-6 subtle"><i class="fas fa-check-circle text-primary me-2"></i>Data cleaning(Excel) & validation</li>
                         <li class="col-sm-6 subtle"><i class="fas fa-check-circle text-primary me-2"></i>SQL & data modelling</li>
@@ -148,4 +147,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
